themes/asterisk/source/styles/modules/_social-activities.scss
.SocialActivities {
  display: flex;
  flex-direction: column;
  position: relative;
  min-height: rem(120px);
  padding-top: 0;

  &::before,
  &::after {
    display: block;
    position: absolute;
    top: 0;
    width: 100%;
    height: 1px;
    background: $color-border;
    content: "";
    animation: 1s ease 1 socialStream both;
    will-change: transform;
  }

  &::before,
  &::after {
    display: none;
  }

  @media (min-width: $breakpoint) {
    flex-basis: rem(640px);
    max-width: 100%;
    padding-top: rem(60px);

    &::before,
    &::after {
      display: block;
      width: 1px;
      height: 100%;
    }

    &::after {
      right: 0;
    }
  }
}

.SocialActivities-loader {
  display: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
}

.SocialActivities-header {
  padding: 0 rem(20px) rem(20px);
  color: $color-text-dark;
}

.SocialActivities-heading {
  @include font-size($font-size-normal);
}

.SocialActivities-heading,
.SocialActivities-list {
  opacity: 1;
  transition: 1s opacity ease;
}

.SocialActivities-list {
  position: relative;
  margin: 0;
  padding: 0;
  list-style: none;
}

.SocialActivities-list-item {
  border-bottom: 1px solid $color-border;

  &:first-child {
    border-top: 1px solid $color-border;
  }
}

.SocialActivities-is-loading {
  .SocialActivities-loader {
    display: block;
  }

  .SocialActivities-list {
    opacity: 0;
  }
}

@keyframes socialStream {
  from {
    transform: scaleY(0);
  }

  to {
    transform: scaleY(1);
  }
}

